--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha2 
  	- Added ability to show Album art on Browse -> Albums
  	- Added Similar Artists Link, requires MyStrands
  	- Fixed hovering on the static Ratings displays
  	- Added MyStrands Plugin, must be enabled under Plugins
  	- Re-enabled / updated Plugin functionality
  	- Fixed CSS (Thx Spocky) 
  	- Added Playlists as a browse type and fixed playback
  	- Fixed an issue where albums of the moment would show when you 
		had 0 albums
  	- Fixed warnings on Update & typo in Install
  	- Removed redundent GPL licence file
  	- Fixed filesize() issue on config re-gen
  	- Fixed an issue with seeking causing incorrect stats counts 
	- Fixed a potential issue with the kajax.js and checkboxes
	- Added 'Advanced Search' link to top rightbar
	- Added Paging to bottom of all views
	- Fixed get_location() (Thx ichneumon)
	- Moved Quick search to the top, right appears on every page
	- Fixed an issue with reading id3tags causing a uncaught exception
		due to direct reference to getid3() 
  	- Added check on clean to see if Root path is readable, if not
		stop clean (mount point failures) 
  	- Fixed now playing, hopefully once and for all
  	- Added distinct sessions for each stream action, also allows
		for independent session lengths between interface
		and streaming
  	- Added paging on all song displays including search
  	- Fixed searching via quicksearch bar
  	- Added 'Your' playlists to leftbar with play and view links
  	- Fixed clear now playing
  	- Fixed now playing issues with Audacious 1.3.x office space style

--------------------------------------------------------------------------
  v.3.4-Alpha1 07/29/2007