@@ -25,8 +25,8 @@ $ajax_url = Config::get('ajax_url');
 // Title for this album
 $title		= scrub_out($album->name) . ' (' . $album->year . ') -- ' . $album->f_artist; 
 ?>
-<?php show_box_top($title); ?>
-<div style="float:left;display:table-cell;width:140px;">
+<?php show_box_top($title,'info-box'); ?>
+	<div style="float:left;margin-right:10px;">
 	<?php 
         if ($album_name != _('Unknown (Orphaned)')) {
 		$aa_url = $web_path . "/image.php?id=" . $album->id . "&amp;type=popup&amp;sid=" . session_id();
@@ -42,7 +42,7 @@ $title		= scrub_out($album->name) . ' (' . $album->year . ') -- ' . $album->f_ar
 		</div>
 	</div>
 	<strong><?php echo _('Actions'); ?>:</strong><br />
-	<div style="padding-left:5px;">
+	<div id="information_actions">
 	<span class="text-action"><?php echo Ajax::text('?action=basket&type=album&id=' . $album->id,_('Play Album'),'play_full_' . $album->id); ?></span>
 	<span class="text-action"><?php echo Ajax::text('?action=basket&type=album_random&id=' . $album->id,_('Play Random from Album'),'play_random_' . $album->id); ?></span> 
 	<?php if ($GLOBALS['user']->has_access('75')) { ?>
@@ -55,9 +55,14 @@ $title		= scrub_out($album->name) . ' (' . $album->year . ') -- ' . $album->f_ar
 	<?php if (Access::check_function('batch_download')) { ?>
 	<a href="<?php echo $web_path; ?>/batch.php?action=alb&amp;id=<?php echo $album->id; ?>"><?php echo _('Download'); ?></a><br />
 	<?php } ?>
+	<?php if (Plugin::is_installed('OpenStrands')) { ?>
+	<span class="text-action"><?php echo Ajax::text('?page=stats&action=show_check_album_tracks&id=' . $album->id,_('Find Missing Tracks'),'album_missing_tracks'); ?></span>
+	<?php } ?>
 	</div>
-
 <?php show_box_bottom(); ?>
+<div id="additional_information">
+&nbsp;
+</div>
 <?php 
 	show_box_top($album->name . ' ' . _('Songs')); 
 	$object_ids = $album->get_songs(); 
